# linko-precision-motor-controller

./: .gitignore  CMakeLists.txt  README.md
boards/: README.md
boards/hy_gb4212_drv_a4/: README.md  board.yaml
boards/hy_gb4212_drv_a4/include/: board_pins.h  lks_pinmap.h
boards/hy_gb4212_drv_a4/linker/: LKS32MC454NCQ8.ld  app_slot.ld
boards/hy_gb4212_drv_a4/startup/: startup_lks32mc454.S
bootloader/: README.md
bootloader/linker/: bootloader.ld
bootloader/src/: boot_jump.c  boot_jump.h  boot_main.c  boot_ota.c  boot_ota.h
cmake/: LksSdk.cmake  arm-gcc.cmake
config/: CONFIG.md  README.md  platform.yaml
config/applications/: arm_joint.yaml  bench_low_voltage.yaml
config/motors/: README.md  gb4212_18v.yaml
docs/: CAN_Protocol.md  PRODUCTION_CHECKLIST.md  PUBLISH.md  README.md  REFERENCE_EXAMPLE.md
docs/architecture/: ARCHITECTURE.md  FOLDER_MAP.md
firmware/: entry.c
firmware/app/linko_precision_motor/: angle_source.c  commissioning.h  cyphal_can.c  cyphal_can_msg_list.h  fault.c  foc.c  hfi.c  huayi_services.c  joint_axis.c  main_loop.c  motion_profile.c  motion_profile.h  motor_fsm.h  motor_status.c  pid.c  pid.h  position_loop.c  protection.c  smo.c  svpwm.h
firmware/app/linko_precision_motor/comm/: cyphal_can.h  cyphal_can_recv.c  cyphal_can_send.c  cyphal_can_stub.c  huayi_services.c  motor_status.c  motor_status.h
firmware/app/linko_precision_motor/control/: joint_axis.c  joint_axis.h  motion_profile.c  pid.c  position_loop.c  speed_loop.c
firmware/app/linko_precision_motor/motor/: angle_source.c  angle_source.h  foc.c  svpwm.c  trap_commutation.c
firmware/app/linko_precision_motor/runtime/: commissioning.c  commissioning.h  main_loop.c  motor_fsm.c
firmware/bsp/: board.c
firmware/common/: crc16_ccitt.c  crc16_ccitt.h  crc32_mpeg2.c  fw_config.h  ota_layout.h  runtime_config.h
firmware/drivers/: adc_current.c  adc_current.h  can_lks.c  encoder_kth7816.c  hal_lks.c  irq_lks.c  mcpwm_motor.c
firmware/sys/: config.h  config_store.c  fw_cfg.h  hal_stubs.c  hardware_probe.c  hardware_probe.h  lks_stubs.c  nvs.h  ota_manager.c  ota_manager.h  platform_init_lks.c  startup_protection.c  startup_protection.h  storage_store.c  sys_diag.c  sys_diag.h
include/: board.h  version.h
src/app/: commissioning.c  fault.c  fault.h  main.c  motor_fsm.c  protection.c  protection.h
src/board/: board.c  board_irq.c  board_irq.h  lks_hal.c  lks_hal.h
src/comm/: cyphal_can.c  cyphal_can.h  cyphal_can_recv.c  cyphal_can_recv.h  cyphal_can_send.c  cyphal_can_send.h  huayi_services.c  huayi_services.h  motor_status.c
src/config/: config.c  nvs.c  nvs.h
src/control/: joint_axis.c  joint_axis.h  motion_profile.c  pid.c  position_loop.c  position_loop.h  speed_loop.c  speed_loop.h
src/drivers/: adc_current.c  can_lks.c  can_lks.h  encoder_kth7816.c  encoder_kth7816.h  mcpwm_motor.c  mcpwm_motor.h
src/motor/: angle_source.c  foc.c  foc.h  svpwm.c  trap_commutation.c  trap_commutation.h
src/motor/observer/: hfi.c  hfi.h  smo.c  smo.h
src/util/crc/: crc16_ccitt.c  crc32_mpeg2.c  crc32_mpeg2.h
tests/: README.md
tests/unit/host/: test_hardware_probe.c  test_ota_state.c  test_startup_protection.c
tools/: fetch_third_party.ps1  gen_config.py
tools/ci/: release_gate.ps1  release_gate.sh  run_unit_tests.ps1  run_unit_tests.sh
